Mon Aug 25 22:03:43 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ASNMP/asnmp/address.cpp:
        * ASNMP/asnmp/address.h:
        * ASNMP/asnmp/ctr64.cpp:
        * ASNMP/asnmp/ctr64.h:
        * ASNMP/asnmp/integer.cpp:
        * ASNMP/asnmp/integer.h:
        * ASNMP/asnmp/target.cpp:
        * ASNMP/asnmp/target.h:
        * ASNMP/asnmp/timetick.cpp:
        * ASNMP/asnmp/timetick.h:
          Fixed additional const compilation errors.

        * ASNMP/tests/tests.mpc:
          Added new mpc file.

        * ASNMP/tests/Address_Test.cpp:
        * ASNMP/tests/Target_Test.cpp:
          Removed unused variables to quash warnings.

        * ASNMP/tests/test_config.h:
          Added #include streams.h and removed old style headers; changed
          use of open() flags to correct type.

Mon Aug 25 11:51:44 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* COPYING:
	* THANKS:

	  Updated Doug's e-mail address.

Mon Aug 25 11:13:28 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/em3vcp.mpd:
        * bin/MakeProjectCreator/templates/em3vcpdll.mpt:
        * bin/MakeProjectCreator/templates/em3vcpdllexe.mpt:
        * bin/MakeProjectCreator/templates/em3vcplib.mpt:
        * bin/MakeProjectCreator/templates/em3vcplibexe.mpt:
        * bin/MakeProjectCreator/templates/nmake.mpd:
        * bin/MakeProjectCreator/templates/nmakedll.mpt:
        * bin/MakeProjectCreator/templates/nmakeexe.mpt:
        * bin/MakeProjectCreator/templates/vc6dsp.mpd:
        * bin/MakeProjectCreator/templates/vc6dspdll.mpt:
        * bin/MakeProjectCreator/templates/vc6dspdllexe.mpt:
        * bin/MakeProjectCreator/templates/vc6dsplib.mpt:
        * bin/MakeProjectCreator/templates/vc6dsplibexe.mpt:
        * bin/MakeProjectCreator/templates/vc7.mpd:
        * bin/MakeProjectCreator/templates/vc7dll.mpt:
        * bin/MakeProjectCreator/templates/vc7exe.mpt:

          Added the ability to enable and disable optimization for the